--- a/src/assets/scss/object/component/_breadcrumbs.scss
+++ b/src/assets/scss/object/component/_breadcrumbs.scss
@@ -10,7 +10,7 @@
         margin: 0 auto;
         max-width: 1100px;
         color: #fff;
-        font-family: cross-platform-yu-gothic, sans-serif;
+        font-family: yu-gothic-pr6n, sans-serif;;
         position: relative;
         z-index: 1;
 
