--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -445,7 +445,7 @@
 
 	.txt {
 		text-align: center;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 700;
 		padding: 20px 0;
 		line-height: 1;
@@ -497,7 +497,7 @@
 
 	.txt {
 		text-align: center;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 700;
 		padding: 20px 0;
 		line-height: 1;
@@ -584,7 +584,7 @@
 
 	.txt {
 		text-align: center;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 700;
 		padding: 20px 0;
 		line-height: 1;
@@ -625,7 +625,7 @@
 
 	.txt {
 		text-align: center;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 700;
 		padding: 20px 0;
 		line-height: 1;
