--- a/src/assets/scss/pages/_assetmanagement.scss
+++ b/src/assets/scss/pages/_assetmanagement.scss
@@ -350,7 +350,7 @@
 					}
 				}
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -387,7 +387,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -544,7 +544,7 @@
 		}
 
 		&__header--sub {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #333333;
@@ -605,7 +605,7 @@
 				}
 			}
 			.text {
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				font-weight: 500;
 				@include font-line(13, 26);
 				text-align: left;
@@ -652,7 +652,7 @@
 				}
 
 				&_item {
-					font-family: cross-platform-yu-gothic;
+					font-family: yu-gothic-pr6n, sans-serif;
 					text-align: left;
 					@include font-line(9, 26);
 					color: #87b2db;
@@ -808,7 +808,7 @@
 					letter-spacing: 0.3em;
 				}
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -846,7 +846,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -995,7 +995,7 @@
 					letter-spacing: 0.15em;
 				}
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1031,7 +1031,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1185,7 +1185,7 @@
 
 		&__header--sub {
 			position: relative;
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #fff;
@@ -1209,7 +1209,7 @@
 		}
 
 		.card_ttl {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
 			color: #2589ce;
 			font-weight: 700;
@@ -1224,7 +1224,7 @@
 		}
 
 		.desc {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(11, 16);
 			color: #333333;
 			font-weight: 500;
@@ -1288,7 +1288,7 @@
 				}
 
 				&-desc {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -1451,7 +1451,7 @@
 		}
 
 		.qtext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
 			color: #2589ce;
 			letter-spacing: 0.2em;
@@ -1481,7 +1481,7 @@
 		}
 
 		.atext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(13, 26);
 			color: #333333;
 			letter-spacing: 0.15em;
@@ -1570,7 +1570,7 @@
 		}
 
 		&_item {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			font-size: 13px !important;
 			line-height: 26px !important;
