--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -379,7 +379,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -424,7 +424,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -545,7 +545,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -714,7 +714,7 @@
 		}
 
 		&__header--sub {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #000;
@@ -779,7 +779,7 @@
 			}
 
 			.text {
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				font-weight: 500;
 				@include font-line(13, 26);
 				text-align: left;
@@ -829,7 +829,7 @@
 				}
 
 				&_item {
-					font-family: cross-platform-yu-gothic;
+					font-family: yu-gothic-pr6n, sans-serif;
 					text-align: left;
 					@include font-line(9, 26);
 					color: #87b2db;
@@ -993,7 +993,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1034,7 +1034,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1200,7 +1200,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1241,7 +1241,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1402,7 +1402,7 @@
 
 		&__header--sub {
 			position: relative;
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #fff;
@@ -1427,7 +1427,7 @@
 		}
 
 		.card_ttl {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
 			color: #2589ce;
 			font-weight: 700;
@@ -1443,7 +1443,7 @@
 		}
 
 		.desc {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(11, 16);
 			color: #000;
 			font-weight: 500;
@@ -1509,7 +1509,7 @@
 				}
 
 				&-desc {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -1680,7 +1680,7 @@
 		}
 
 		.qtext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
 			color: #2589ce;
 			letter-spacing: 0.2em;
@@ -1713,7 +1713,7 @@
 		}
 
 		.atext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(13, 26);
 			color: #333333;
 			letter-spacing: 0.15em;
@@ -1791,7 +1791,7 @@
 		}
 
 		&_item {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(9, 26);
 			color: #87b2db;
