--- a/src/assets/scss/pages/_realestatepurchase.scss
+++ b/src/assets/scss/pages/_realestatepurchase.scss
@@ -356,7 +356,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -637,7 +637,7 @@
 		}
 
 		&__header--sub {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #000;
@@ -735,7 +735,7 @@
 				}
 
 				&_item {
-					font-family: cross-platform-yu-gothic;
+					font-family: yu-gothic-pr6n, sans-serif;
 					text-align: left;
 					@include font-line(9, 26);
 					color: #87b2db;
@@ -917,7 +917,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1091,7 +1091,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1222,7 +1222,7 @@
 
 		&__header--sub {
 			position: relative;
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #fff;
@@ -1246,7 +1246,7 @@
 		}
 
 		.card_ttl {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
 			color: #2589ce;
 			font-weight: 700;
@@ -1261,7 +1261,7 @@
 		}
 
 		.desc {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(11, 16);
 			color: #000;
 			font-weight: 500;
@@ -1324,7 +1324,7 @@
 				}
 
 				&-desc {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -1488,7 +1488,7 @@
 		}
 
 		.qtext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
 			color: #2589ce;
 			letter-spacing: 0.2em;
@@ -1518,7 +1518,7 @@
 		}
 
 		.atext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(13, 26);
 			color: #333333;
 			letter-spacing: 0.15em;
@@ -1588,7 +1588,7 @@
 		}
 
 		&_item {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(9, 26);
 			color: #87b2db;
@@ -1610,7 +1610,7 @@
 
 	.br-sp{
 		display: none;
-		font-family: cross-platform-yu-gothic;
+		font-family: yu-gothic-pr6n, sans-serif;
 		
 		@include is-sp{
 			@include font-line(16);
