--- a/src/assets/scss/pages/_thanks.scss
+++ b/src/assets/scss/pages/_thanks.scss
@@ -71,7 +71,7 @@
 		}
 
 		&--desc {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			font-weight: 500;
 			color: #fff;
 			letter-spacing: 0.2em;
