--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -88,7 +88,7 @@
 			}
 
 			&-desc {
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 
 				&-txt {
 					@include font-line(13, 26);
@@ -262,7 +262,7 @@
 						// 	&-sub {
 						// 		@include font-line(12);
 						// 		color: $color-text03;
-						// 		font-family: cross-platform-yu-gothic;
+						// 		font-family: yu-gothic-pr6n, sans-serif;
 						// 		letter-spacing: 0.3em;
 
 						// 		@include is-max(370px) {
@@ -314,7 +314,7 @@
 						}
 
 						&-03 {
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -604,7 +604,7 @@
 						// 	&-sub {
 						// 		@include font-line(12);
 						// 		color: $color-text03;
-						// 		font-family: cross-platform-yu-gothic;
+						// 		font-family: yu-gothic-pr6n, sans-serif;
 						// 		letter-spacing: 0.3em;
 
 						// 		@include is-max(500px) {
@@ -660,7 +660,7 @@
 						}
 
 						&-03 {
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -928,7 +928,7 @@
 						// 	&-sub {
 						// 		@include font-line(12);
 						// 		color: $color-text03;
-						// 		font-family: cross-platform-yu-gothic;
+						// 		font-family: yu-gothic-pr6n, sans-serif;
 						// 		letter-spacing: 0.3em;
 
 						// 		@include is-max(500px) {
@@ -992,7 +992,7 @@
 						}
 
 						&-03 {
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -1238,7 +1238,7 @@
 						// 	&-sub {
 						// 		@include font-line(12);
 						// 		color: $color-text03;
-						// 		font-family: cross-platform-yu-gothic;
+						// 		font-family: yu-gothic-pr6n, sans-serif;
 						// 		letter-spacing: 0.3em;
 
 						// 		@include is-max(500px) {
@@ -1306,7 +1306,7 @@
 						}
 
 						&-03 {
-							font-family: cross-platform-yu-gothic, sans-serif;
+							font-family: yu-gothic-pr6n, sans-serif;;
 							@include font-line(13, 26);
 							font-weight: 500;
 							letter-spacing: 0.2em;
@@ -1474,7 +1474,7 @@
 				}
 
 				&-desc {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -1818,7 +1818,7 @@
 						@include font-line(12, 26);
 						letter-spacing: 0.15em;
 						font-weight: 500;
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						padding-bottom: 37px;
 
 						@include is-sp {
@@ -1959,7 +1959,7 @@
 					}
 
 					&-date {
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						padding-top: 4px;
 						// padding-right: 111px;
 						width: 230px;
@@ -1985,7 +1985,7 @@
 					}
 
 					&-txt {
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						color: #333;
 						width: 770px;
 
