--- a/src/assets/scss/object/component/_banner.scss
+++ b/src/assets/scss/object/component/_banner.scss
@@ -115,7 +115,7 @@
 		position: relative;
 		z-index: 150;
 		color: #fff;
-		font-family: cross-platform-yu-gothic;
+		font-family: yu-gothic-pr6n, sans-serif;
 		margin: 0 auto;
 		text-align: left;
 		@include font-line(14.5, 17.5);
