--- a/src/assets/scss/object/component/_img-box.scss
+++ b/src/assets/scss/object/component/_img-box.scss
@@ -36,7 +36,7 @@
 
 	&__sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic;
+		font-family: yu-gothic-pr6n, sans-serif;
 		font-weight: 700;
 		padding-bottom: 10px;
 
@@ -73,7 +73,7 @@
 
 	&--sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic;
+		font-family: yu-gothic-pr6n, sans-serif;
 		font-weight: 500;
 		writing-mode: vertical-lr;
 		letter-spacing: 0.22em;
