--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -216,7 +216,7 @@
 
 				p {
 					color: $color-text03;
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 
 					&:nth-of-type(1) {
 						font-weight: 500;
@@ -230,7 +230,7 @@
 		}
 		&--ttl {
 			text-align: center;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			font-weight: 700;
 			line-height: 1;
 			padding: 20px 0;
@@ -250,7 +250,7 @@
 		&--sub {
 			color: $color-text-default;
 			text-align: justify;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			font-weight: 500;
 			@include font-line(11);
 			line-height: 16.5px;
