--- a/src/assets/scss/object/project/_addons.scss
+++ b/src/assets/scss/object/project/_addons.scss
@@ -190,7 +190,7 @@
 
 				p:nth-child(2) {
 					font-size: 11px;
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					letter-spacing: 0.13em;
 
@@ -485,7 +485,7 @@
 
 				p:nth-child(2) {
 					font-size: 11px;
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					letter-spacing: 0.2em;
 
