--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -287,7 +287,7 @@
 				p {
 					@include font-line(14, 19);
 					font-weight: 700;
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					color: #fff;
 					align-items: center;
 					letter-spacing: 0.3em;
@@ -335,7 +335,7 @@
 				a {
 					@include font-line(11);
 					font-weight: 700;
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					color: #fff;
 
 					@include is-sp {
@@ -379,7 +379,7 @@
 								content: "/";
 								@include font-line(11);
 								font-weight: 500;
-								font-family: cross-platform-yu-gothic, sans-serif;
+								font-family: yu-gothic-pr6n, sans-serif;;
 								color: #fff;
 								padding: 0 15px 0 10px;
 
@@ -590,7 +590,7 @@
 					p {
 						@include font-line(14, 18);
 						font-weight: 500;
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						color: #fff;
 						text-align: center;
 						letter-spacing: 0.13em;
@@ -629,7 +629,7 @@
 			p {
 				color: #fff;
 				text-transform: uppercase;
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				@include font-line(11, 43);
 			}
 		}
@@ -684,7 +684,7 @@
 				width: 100%;
 				@include font-line(14.5, 19);
 				font-weight: 700;
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				color: #fff;
 				align-items: center;
 				display: none;
@@ -767,7 +767,7 @@
 				text-align: center;
 				@include font-line(14, 19);
 				font-weight: 700;
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;
 
 				p {
 					color: #fff;
@@ -814,7 +814,7 @@
 				}
 
 				&-sp {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;
 					display: none;
 
 					&-cont {
@@ -1078,7 +1078,7 @@
 			}
 			&-txt {
 				@include font-line(15);
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				font-weight: 500;
 				margin-left: 20px;
 				color: #258acf;
@@ -1100,7 +1100,7 @@
 			}
 			&-txt {
 				@include font-line(15);
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				font-weight: 500;
 				color: #fff;
 				padding-left: 10px;
