--- a/src/assets/scss/pages/_confirm.scss
+++ b/src/assets/scss/pages/_confirm.scss
@@ -40,7 +40,7 @@
 	}
 
 	input {
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 500;
 		letter-spacing: 0.28em;
 	}
@@ -93,7 +93,7 @@
 		&--ttl {
 			@include font-line(15);
 			font-weight: 700;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			letter-spacing: 0.32em;
 			color: #258acf;
 			text-align: center;
@@ -102,7 +102,7 @@
 
 	&__desc {
 		@include font-line(11);
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 500;
 		text-align: center;
 		color: #333333;
@@ -113,7 +113,7 @@
 	&__req {
 		&--txt {
 			@include font-line(12);
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			font-weight: 500;
 			color: #258acf;
 			text-align: left;
@@ -487,7 +487,7 @@
 						border-radius: 10px;
 						margin-bottom: 20px;
 						color: #ffffff;
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						@include font-line(13);
 						letter-spacing: 0.28em;
 					}
@@ -748,7 +748,7 @@
 			letter-spacing: 0.20em;
 			text-align: left;
 			@include font-line(13);
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 		}
 	}
 
