--- a/src/assets/scss/pages/_interview.scss
+++ b/src/assets/scss/pages/_interview.scss
@@ -68,7 +68,7 @@
         margin: 0 auto;
         max-width: 1100px;
         color: #fff;
-        font-family: cross-platform-yu-gothic, sans-serif;
+        font-family: yu-gothic-pr6n, sans-serif;;
         @include font-line(11);
         @include is-sp {
             @include font-line(12.5);
@@ -153,7 +153,7 @@
     &-sub2 {
         @include font-line(13, 26);
         font-weight: 500;
-        font-family: cross-platform-yu-gothic, sans-serif;
+        font-family: yu-gothic-pr6n, sans-serif;;
         text-align: center;
 
         @include is-sp {
@@ -226,7 +226,7 @@
             &-txt2 {
                 @include font-line(13, 26);
                 font-weight: 500;
-                font-family: cross-platform-yu-gothic, sans-serif;
+                font-family: yu-gothic-pr6n, sans-serif;;
                 padding-bottom: 57px;
 
                 @include is-sp {
@@ -247,7 +247,7 @@
                 &-hdr {
                     @include font-line(13, 26);
                     font-weight: 700;
-                    font-family: cross-platform-yu-gothic, sans-serif;
+                    font-family: yu-gothic-pr6n, sans-serif;;
                     color: #258acf;
                     text-align: center;
                     padding-bottom: 23px;
@@ -265,13 +265,13 @@
                         letter-spacing: 0.2em;
                         @include font-line(13, 26);
                         font-weight: 700;
-                        font-family: cross-platform-yu-gothic, sans-serif;
+                        font-family: yu-gothic-pr6n, sans-serif;;
                     }
                     &-txt {
                         margin-left: 18px;
                         @include font-line(13, 26);
                         font-weight: 500;
-                        font-family: cross-platform-yu-gothic, sans-serif;
+                        font-family: yu-gothic-pr6n, sans-serif;;
                         letter-spacing: 0.2em;
                     }
                 }
@@ -349,7 +349,7 @@
                     align-items: center;
 
                     p:nth-child(1) {
-                        font-family: cross-platform-yu-gothic, sans-serif;
+                        font-family: yu-gothic-pr6n, sans-serif;;
                         @include font-line(13, 26);
                         font-weight: 500;
                         padding-top: 3px;
@@ -383,7 +383,7 @@
                 &-hdr {
                     @include font-line(15, 22);
                     font-weight: 700;
-                    font-family: cross-platform-yu-gothic, sans-serif;
+                    font-family: yu-gothic-pr6n, sans-serif;;
                     color: #258acf;
                     text-align: center;
                     letter-spacing: 0.2em;
@@ -399,7 +399,7 @@
                         color: #258acf;
                         @include font-line(12.5, 22.5);
                         font-weight: 700;
-                        font-family: cross-platform-yu-gothic, sans-serif;
+                        font-family: yu-gothic-pr6n, sans-serif;;
                         letter-spacing: 0.2em;
                         @include is-max(350px){
                             font-style: 3.5vw;;
@@ -409,7 +409,7 @@
                         margin-left: 18px;
                         @include font-line(12.5, 22.5);
                         font-weight: 500;
-                        font-family: cross-platform-yu-gothic, sans-serif;
+                        font-family: yu-gothic-pr6n, sans-serif;;
                         letter-spacing: 0.2em;
                         @include is-max(350px){
                             margin-left: 12px;
@@ -534,7 +534,7 @@
                 }
 
                 &-txt2 {
-                    font-family: cross-platform-yu-gothic, sans-serif;
+                    font-family: yu-gothic-pr6n, sans-serif;;
                     @include font-line(12.93, 25);
                     font-weight: 500;
                     color: #333;
@@ -707,7 +707,7 @@
                 }
 
                 &-txt2 {
-                    font-family: cross-platform-yu-gothic, sans-serif;
+                    font-family: yu-gothic-pr6n, sans-serif;;
                     @include font-line(12.93, 25);
                     font-weight: 500;
                     letter-spacing: 0.2em;
