--- a/src/assets/scss/pages/_managementphilosophy.scss
+++ b/src/assets/scss/pages/_managementphilosophy.scss
@@ -106,7 +106,7 @@
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			@include font-line(11);
 
 			@include is-sp {
@@ -199,7 +199,7 @@
 						@include font-line(13, 26);
 						letter-spacing: 0.2em;
 						font-weight: 500;
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						text-align: justify;
 
 						@include is-sp {
@@ -308,7 +308,7 @@
 						@include font-line(13, 26);
 						letter-spacing: 0.2em;
 						font-weight: 500;
-						font-family: cross-platform-yu-gothic, sans-serif;
+						font-family: yu-gothic-pr6n, sans-serif;;
 						text-align: justify;
 
 						span {
@@ -425,7 +425,7 @@
 
 	&__sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 500;
 		letter-spacing: 0.2em;
 		text-align: center;
