--- a/src/assets/scss/pages/_office-gallery.scss
+++ b/src/assets/scss/pages/_office-gallery.scss
@@ -99,7 +99,7 @@
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			@include font-line(12);
 		}
 
@@ -338,7 +338,7 @@
 				}
 
 				.desc {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					@include font-line(13, 26);
 					font-weight: 500;
 					letter-spacing: 0.1em;
