--- a/src/assets/scss/pages/_ourenterprises.scss
+++ b/src/assets/scss/pages/_ourenterprises.scss
@@ -67,7 +67,7 @@
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			@include font-line(11);
 
 			@include is-sp {
@@ -133,7 +133,7 @@
 
 	&__sub {
 		color: $color-text03;
-		font-family: cross-platform-yu-gothic, sans-serif;
+		font-family: yu-gothic-pr6n, sans-serif;;
 		font-weight: 500;
 		letter-spacing: 0.2em;
 		text-align: center;
@@ -291,7 +291,7 @@
 				// 		&-sub {
 				// 			@include font-line(12);
 				// 			color: $color-text03;
-				// 			font-family: cross-platform-yu-gothic;
+				// 			font-family: yu-gothic-pr6n, sans-serif;
 				// 			letter-spacing: 0.3em;
 				// 		}
 				// 	}
@@ -453,7 +453,7 @@
 
 				&03 {
 					color: #fff;
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					letter-spacing: 0.15em;
 					padding: 0 0 30px 0;
