--- a/src/assets/scss/pages/_realestateoperation.scss
+++ b/src/assets/scss/pages/_realestateoperation.scss
@@ -377,7 +377,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -415,7 +415,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -590,7 +590,7 @@
 		}
 
 		&__header--sub {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #333333;
@@ -656,7 +656,7 @@
 			}
 
 			.text {
-				font-family: cross-platform-yu-gothic, sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;;
 				font-weight: 500;
 				@include font-line(13, 26);
 				text-align: left;
@@ -704,7 +704,7 @@
 				}
 
 				&_item {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					text-align: left;
 					@include font-line(9, 26);
 					color: #87b2db;
@@ -970,7 +970,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1009,7 +1009,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1178,7 +1178,7 @@
 				}
 
 				.text {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1215,7 +1215,7 @@
 					}
 
 					&_item {
-						font-family: cross-platform-yu-gothic;
+						font-family: yu-gothic-pr6n, sans-serif;
 						text-align: left;
 						@include font-line(9, 26);
 						color: #87b2db;
@@ -1379,7 +1379,7 @@
 
 		&__header--sub {
 			position: relative;
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			@include font-line(13, 26);
 			color: #fff;
@@ -1404,7 +1404,7 @@
 		}
 
 		.card_ttl {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
 			color: #2589ce;
 			font-weight: 700;
@@ -1420,7 +1420,7 @@
 		}
 
 		.desc {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(11, 16);
 			color: #333333;
 			font-weight: 500;
@@ -1487,7 +1487,7 @@
 				}
 
 				&-desc {
-					font-family: cross-platform-yu-gothic, sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -1681,7 +1681,7 @@
 		}
 
 		.qtext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
 			color: #2589ce;
 			letter-spacing: 0.2em;
@@ -1714,7 +1714,7 @@
 		}
 
 		.atext {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(13, 26);
 			color: #333333;
 			letter-spacing: 0.15em;
@@ -1806,7 +1806,7 @@
 		}
 
 		&_item {
-			font-family: cross-platform-yu-gothic;
+			font-family: yu-gothic-pr6n, sans-serif;
 			text-align: left;
 			font-size: 13px !important;
 			line-height: 26px !important;
