--- a/src/assets/scss/pages/_result.scss
+++ b/src/assets/scss/pages/_result.scss
@@ -42,7 +42,7 @@
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			@include font-line(11);
 
 			@include is-sp {
@@ -124,7 +124,7 @@
 
 		&__chart-ins {
 			color: $color-text03;
-			font-family: cross-platform-yu-gothic, sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;;
 			font-weight: 500;
 			padding: 40px 0 60px 0;
 			letter-spacing: 0.2em;
