--- a/src/assets/scss/sections/_page-column.scss
+++ b/src/assets/scss/sections/_page-column.scss
@@ -67,7 +67,7 @@
                             text-align: center;
                             padding: 10px 0;
                             border-radius: 8px;
-                            font-family:cross-platform-yu-gothic;
+                            font-family:yu-gothic-pr6n, sans-serif;
                             font-weight: 500;
                             font-size: 13px;
                             letter-spacing: .18em;
@@ -205,7 +205,7 @@
                         transition: .3s ease-in-out;
                     }
                     &__link{
-                        font-family: cross-platform-yu-gothic, sans-serif;
+                        font-family: yu-gothic-pr6n, sans-serif;;
                         font-size: 14px;
                         font-weight: 700;
                         color: #0093ee;
@@ -378,7 +378,7 @@
 
                             &-title{
                                 @include font-line(13, 22);
-                                font-family:cross-platform-yu-gothic;
+                                font-family:yu-gothic-pr6n, sans-serif;
                                 font-weight: 700;
                                 color: #0093ee;
                                 margin-bottom: 5px;
@@ -394,7 +394,7 @@
                                     color: #808080;
                                 }
                                 @include font-line(13, 19.5);
-                                font-family:cross-platform-yu-gothic;
+                                font-family:yu-gothic-pr6n, sans-serif;
                                 font-weight: 500;
                                 color: #808080;
                             }
@@ -409,7 +409,7 @@
                                     background-color: #0093ee;
                                     color: #fff;
                                     @include font-line(12);
-                                    font-family:cross-platform-yu-gothic;
+                                    font-family:yu-gothic-pr6n, sans-serif;
                                     font-weight: 500;
                                     padding: 2px 10px 2px;
                                     border-radius: 10px;
@@ -503,7 +503,7 @@
 
                     h3{
                         @include font-line(16);
-                        font-family:cross-platform-yu-gothic, sans-serif;
+                        font-family:yu-gothic-pr6n, sans-serif;;
                         font-weight: 700;
                         color: #0093ee;
                         display: flex;
@@ -522,7 +522,7 @@
                             background-color: #e7f4fb;
                             color: #0093ee;
                             @include font-line(12);
-                            font-family:cross-platform-yu-gothic;
+                            font-family:yu-gothic-pr6n, sans-serif;
                             font-weight: 500;
                             padding: 2px 10px 0;
                             border-radius: 5px;
@@ -563,7 +563,7 @@
 
                     h3{
                         @include font-line(16);
-                        font-family:cross-platform-yu-gothic, sans-serif;
+                        font-family:yu-gothic-pr6n, sans-serif;;
                         font-weight: 700;
                         color: #0093ee;
                         display: flex;
@@ -611,7 +611,7 @@
                                         @include font-line(10)
                                     }
                                     &_title{
-                                        font-family: cross-platform-yu-gothic, sans-serif;
+                                        font-family: yu-gothic-pr6n, sans-serif;;
                                         font-weight: 500;
                                         @include font-line(11, 22);
                                         color: #0093ee;
@@ -624,7 +624,7 @@
                                         background-color: #0093ee;
                                         color: #fff;
                                         @include font-line(12);
-                                        font-family:cross-platform-yu-gothic;
+                                        font-family:yu-gothic-pr6n, sans-serif;
                                         font-weight: 500;
                                         padding: 2px 10px 2px;
                                         border-radius: 10px;
