new update font family

--- a/src/assets/scss/pages/_assetmanagement.scss
+++ b/src/assets/scss/pages/_assetmanagement.scss
@@ -1566,7 +1566,7 @@
 
 		&_ttl--fs {
 			font-size: 13px !important;
-			font-family: cross-platform-yu-gothic !important;
+			font-family: yu-gothic-pr6n, sans-serif;
 		}
 
 		&_item {
