--- a/src/assets/scss/pages/_privacy-policy.scss
+++ b/src/assets/scss/pages/_privacy-policy.scss
@@ -86,7 +86,7 @@
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
-			font-family: cross-platform-yu-gothic,sans-serif;
+			font-family: yu-gothic-pr6n, sans-serif;
 		}
 
 		span {
