--- a/src/assets/scss/pages/_realestateoperation.scss
+++ b/src/assets/scss/pages/_realestateoperation.scss
@@ -804,8 +804,7 @@
 
 				p {
 					color: #2587cc;
-					font-family: cross-platform-yu-gothic,
-						sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;
 					text-align: center;
 					height: 100px;
 					padding: 15px 10px 0 10px;
@@ -1802,7 +1801,7 @@
 
 		&_ttl--fs {
 			font-size: 13px !important;
-			font-family: cross-platform-yu-gothic !important;
+			font-family: yu-gothic-pr6n, sans-serif;
 		}
 
 		&_item {
