--- a/src/assets/scss/pages/_realestatepurchase.scss
+++ b/src/assets/scss/pages/_realestatepurchase.scss
@@ -320,7 +320,7 @@
 					letter-spacing: 0.3em;
 				}
 				.text {
-					font-family: cross-platform-yu-gothic,sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -473,7 +473,7 @@
 					letter-spacing: 0.3em;
 				}
 				.text {
-					font-family: cross-platform-yu-gothic,sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -693,7 +693,7 @@
 				}
 			}
 			.text {
-				font-family: cross-platform-yu-gothic,sans-serif;
+				font-family: yu-gothic-pr6n, sans-serif;
 				font-weight: 500;
 				@include font-line(13, 26);
 				text-align: left;
@@ -881,7 +881,7 @@
 					letter-spacing: 0.3em;
 				}
 				.text {
-					font-family: cross-platform-yu-gothic,sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1055,7 +1055,7 @@
 					padding-bottom: 0;
 				}
 				.text {
-					font-family: cross-platform-yu-gothic,sans-serif;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
