--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -160,6 +160,11 @@
 
 	.section_2 {
 		padding-top: 55px;
+		padding-bottom: 100px;
+
+		@include is-sp {
+			padding-bottom: 75px;
+		}
 
 		.photos {
 			display: flex;
@@ -173,6 +178,7 @@
 
 			img {
 				width: calc(100% / 5);
+				cursor: pointer;
 
 				@include is-sp {
 					width: calc(100% / 2);
@@ -183,6 +189,7 @@
 
 	.section_3 {
 		padding: 100px 0 100px 0;
+		display: none;
 
 		.l-wrap {
 			position: relative;
@@ -224,6 +231,13 @@
 
 	.c-case03__txt {
 		margin-bottom: 70px;
+	}
+
+	.stairs_txt {
+		width: 300px;
+		@include is-sp {
+			width: 100%;
+		}
 	}
 }
 
