--- a/src/assets/scss/pages/_confirm.scss
+++ b/src/assets/scss/pages/_confirm.scss
@@ -716,23 +716,25 @@
 			width: 100%;
 			color: #000;
 			padding: 10px;
-			border: 1px solid #258acf;
+			// border: 1px solid #258acf;
 		}
 
 		select {
 			width: 100%;
 			color: #d4d4d4;
 			padding: 10px;
-			border: 1px solid #258acf;
+			// border: 1px solid #258acf;
+			border: none;
 		}
 
 		textarea {
 			width: 100%;
 			color: #000;
 			padding: 10px;
-			border: 1px solid #258acf;
+			// border: 1px solid #258acf;
 			resize: none;
 			text-align: left;
+			border: none;
 		}
 
 		textarea::-webkit-input-placeholder {
