--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -1,6 +1,15 @@
 .contact-frm {
 	position: relative;
 
+	.c-buttonCase.blue{
+		padding: 0;
+
+		input{
+			padding: 20px 0;
+			width: 100%;
+		}
+	}
+
 	.c-banner {
 		padding: 0 0 80px 0;
 		background: linear-gradient(to right, #2079bd, #1e91d2);
@@ -668,10 +677,14 @@
 						}
 
 						&:nth-child(2) {
-							width: 26%;
+							width: 195px;
 
 							@include is-sp {
 								width: 45%;
+							}
+
+							@include is-max(375px){
+								width: 159px;
 							}
 						}
 					}
@@ -797,7 +810,7 @@
 
 				div {
 					&:nth-child(1) {
-						width: 28%;
+						width: 190px;
 
 						@include is-sp {
 							width: 100%;
@@ -1046,7 +1059,7 @@
         margin: 0;
 
         float: left;
-        min-width: 200px;
+        // min-width: 200px;
         margin: 0;
     }
 
@@ -1067,6 +1080,7 @@
         pointer-events: none;
         background-color: #258acf;
         color: #fff;
+		z-index: 150;
     }
 
     .selct:after {
@@ -1081,6 +1095,7 @@
         pointer-events: none;
         background-color: #258acf;
         color: #fff;
+		z-index: 150;
     }
 
     /* IE11 hide native button (thanks Matt!) */
@@ -1095,11 +1110,11 @@
         /* Add some styling */
         display: block;
         width: 100%;
-        max-width: 320px;
+        // max-width: 320px;
         height: 50px;
         float: right;
         margin: 5px 0px;
-        padding: 0px 24px;
+        padding: 0px 10px;
         line-height: 1.75;
     }
 }
@@ -1126,6 +1141,10 @@ input,
 	label{
 		vertical-align: sub;
 	}
+}
+
+.wpcf7-form-control-wrap{
+	width: 100%;
 }
 
 .wpcf7-list-item-label{
