--- a/src/assets/scss/pages/_single.scss
+++ b/src/assets/scss/pages/_single.scss
@@ -1,6 +1,11 @@
 .single_page {
 	background-color: #e7f4fb;
 
+	@include is-sp {
+		background-color: #fff;
+		padding: 0 0 15px 0 !important;
+	}
+
 	.column_head_sect {
 		background-color: #fff;
 	}
@@ -19,6 +24,9 @@
 
 	.aioseo-breadcrumbs {
 		padding: 23px 0;
+		@include is-sp {
+			padding: 12px 0;
+		}
 	}
 
 	.aioseo-breadcrumbs,
@@ -55,28 +63,37 @@
 			align-items: center;
 			justify-content: center;
 
-            @include is-sp {
-                div {
-                    width: 100%;
+			@include is-sp {
+				div {
+					width: 100%;
 
-                    img {
-                        width: 100%;
-                        padding: 0 20px;
-                    }
-                }
-            }
+					img {
+						width: 100%;
+						padding: 0 20px;
+					}
+				}
+			}
 
 			p {
-				font-size: 13px;
+				@include font-line(13);
 				letter-spacing: 0.09em;
 				line-height: 20.8px;
 				font-weight: 500;
 				color: #aeaeae;
 				padding: 10px 0;
+
+				@include is-sp {
+					padding: 11px 20px 15px;
+					@include font-line(11.5);
+				}
 			}
 
 			.big_img {
 				margin: 40px 0 46px;
+
+				@include is-sp {
+					margin-bottom: 16.2px;
+				}
 			}
 		}
 
@@ -126,6 +143,8 @@
 
 					@include is-sp {
 						line-height: 20px;
+						font-size: 12.5px;
+						letter-spacing: 0.09em;
 					}
 
 					span {
@@ -137,14 +156,19 @@
 				&02--sub {
 					@include font-line(14, 14);
 					letter-spacing: 0.07em;
-					font-weight: 500;
 					padding: 16px 0 0;
 					font-weight: 500;
+
+					@include is-sp {
+						font-size: 12.5px;
+						letter-spacing: 0.06em;
+						padding: 35px 0 0 0;
+					}
 				}
 
 				&03 {
 					text-align: left;
-					letter-spacing: 0.014em;
+					letter-spacing: 0.14em;
 					@include font-line(22, 22);
 					border-left: 4px solid;
 					padding-left: 6px;
@@ -167,6 +191,11 @@
 					padding: 7px 0 7px 6px;
 					background-color: #e7f4fb;
 					letter-spacing: 0.23em;
+
+					@include is-sp {
+						font-size: 14.4px;
+						letter-spacing: 0.016em;
+					}
 				}
 			}
 
@@ -271,10 +300,17 @@
 
 			.bottom_line {
 				border-bottom: 3px solid #0093ee;
+				@include is-sp {
+					border-bottom: 0;
+				}
 			}
 
 			.single_numbering {
 				padding: 40px 0 50px;
+
+				@include is-sp {
+					padding-bottom: 0;
+				}
 
 				.single_number {
 					display: flex;
@@ -291,6 +327,11 @@
 						color: #0093ee;
 						padding-right: 7px;
 						border-right: 2px solid #0093ee;
+
+						@include is-sp {
+							font-size: 18px;
+							padding-right: 5px;
+						}
 					}
 
 					& p:last-child {
@@ -300,6 +341,12 @@
 						font-family: yu-gothic-pr6n, sans-serif;
 						color: #0093ee;
 						padding-left: 13px;
+
+						@include is-sp {
+							padding-left: 9px;
+							font-size: 13.5px;
+							letter-spacing: .075em;
+						}
 					}
 				}
 
@@ -478,11 +525,21 @@
 				background-color: #fff;
 				padding: 35px 0 29px;
 
+				@include is-sp {
+					padding: 12.5px 0 12.5px;
+					background-color: #E7F4FB;
+				}
+
 				&_content {
 					display: flex;
 					justify-content: space-between;
 					width: 325px;
 					margin: 0 auto;
+
+					@include is-max(500px) {
+						width: 100%;
+						padding: 0 17.2px;
+					}
 				}
 
 				a {
@@ -516,6 +573,10 @@
 					@include font-line(12.65, 12.65);
 					font-weight: 500;
 					font-family: yu-gothic-pr6n, sans-serif;
+
+					@include is-sp {
+						@include font-line(13.5);
+					}
 				}
 			}
 		}
@@ -536,6 +597,13 @@
 					font-weight: 700;
 					color: #0093ee;
 					padding: 23px 0 29px 0;
+					font-family: yu-gothic-pr6n, sans-serif;
+
+					@include is-sp {
+						@include font-line(15);
+						line-height: 21px;
+						letter-spacing: .16em;
+					}
 				}
 			}
 
@@ -608,7 +676,7 @@
 				@include is-sp {
 					padding-left: 0;
 					padding-right: 0;
-					padding-top: 20px;
+					padding-top: 10px;
 					padding-bottom: 30px;
 				}
 
@@ -634,15 +702,25 @@
 					display: flex;
 					justify-content: space-between;
 					align-items: center;
+					margin-bottom: 65px;
+
+					@include is-sp {
+						flex-direction: column;
+						margin-bottom: 42.5px;
+					}
 
 					.post-item {
 						width: calc(50% - 23px);
-						margin-bottom: 50px;
+					
 						@include is-sp {
 							width: 100%;
 							margin-bottom: 25px;
 							padding-bottom: 25px;
-							&:not(:last-child) {
+							// &:not(:last-child) {
+								
+							// }
+
+							@include is-sp {
 								border-bottom: 1px solid #cacaca;
 							}
 						}
@@ -753,6 +831,10 @@
 								}
 							}
 						}
+					}
+
+					& .post-item:last-child {
+						margin: 0;
 					}
 					&_row {
 						@include is-sp {
